# opbnb-quantum

./: .gitignore  Cargo.toml  README.md  msg.txt  output.txt
.cargo/: config.toml
docs/: 01_project-overview  01_project-overview.md  02_ubuntu-22.04_setup  03_pq-crypto_stack  05_smart_contracts  06_cli_client  09_security_audit_checklist  10_user_ops_docs
docs-ny/: 02_ubuntu-22.04_setup.md  03_pq-crypto_stack.md  04_zk-circuits_halo2_stark.md  06_cli_client.md  07_tests_formal-verify.md  08_ci_cd_deploy.md  09_security_audit_checklist.md  10_user_ops_docs.md
src/: lib.rs  main.rs
src/crypto/: kem.rs  mod.rs  sig.rs  switch.rs
tests/: crypto_tests.rs  keygen.rs  pq_end_to_end.rs.bak
